baseline/tfs-controller/manifests/analyticsservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticsservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: analyticsservice
  template:
    metadata:
      labels:
        app: analyticsservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: frontend
        image: ${_CUSTOMER_REGISTRY}/analytics-frontend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30080
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: backend
        image: ${_CUSTOMER_REGISTRY}/analytics-backend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30090
        - containerPort: 9193
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: analyticsservice
  labels:
    app: analyticsservice
spec:
  type: ClusterIP
  selector:
    app: analyticsservice
  ports:
  - name: grpc
    protocol: TCP
    port: 30080
    targetPort: 30080
  - name: grpc-backend
    protocol: TCP
    port: 30090
    targetPort: 30090
  - name: metrics-frontend
    protocol: TCP
    port: 9192
    targetPort: 9192
  - name: metrics-backend
    protocol: TCP
    port: 9193
    targetPort: 9193
