baseline/tfs-controller/manifests/automationservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: automationservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: automationservice
  replicas: 1
  template:
    metadata:
      annotations:
        # Required for IETF L2VPN SBI when both parent and child run in same K8s cluster with Linkerd
        config.linkerd.io/skip-outbound-ports: "2002"
      labels:
        app: automationservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/automation:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30200
        - containerPort: 9192
        command: ["/bin/sh", "-c"]
        args:
        - "sed -i 's/wait_for_environment_variables(/if False: wait_for_environment_variables(/g'
          /var/teraflow/automation/service/__main__.py && python -m automation.service"
        startupProbe:
          grpc:
            port: 30200
          failureThreshold: 5
          periodSeconds: 1
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: automationservice
  labels:
    app: automationservice
spec:
  type: ClusterIP
  selector:
    app: automationservice
  ports:
  - name: grpc
    protocol: TCP
    port: 30200
    targetPort: 30200
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
