baseline/tfs-controller/manifests/bgpls_speakerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgpls-speakerservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bgpls-speakerservice
  replicas: 1
  template:
    metadata:
      labels:
        app: bgpls-speakerservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/opticalcontroller:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 20030
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bgpls-speakerservice
  labels:
    app: bgpls-speakerservice
spec:
  type: ClusterIP
  selector:
    app: bgpls-speakerservice
  ports:
  - name: grpc
    protocol: TCP
    port: 20030
    targetPort: 20030
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
