baseline/tfs-controller/manifests/cachingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachingservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cachingservice
  template:
    metadata:
      labels:
        app: cachingservice
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        ports:
        - containerPort: 6379
          name: client
        command:
        - redis-server
        args:
        - --requirepass
        - $(REDIS_PASSWORD)
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cachingservice
spec:
  type: ClusterIP
  selector:
    app: cachingservice
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
