baseline/tfs-controller/manifests/contextservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: contextservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: contextservice
  #replicas: 1
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-outbound-ports: "4222"
      labels:
        app: contextservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/context:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 1010
        - containerPort: 9192
        startupProbe:
          grpc:
            port: 1010
          failureThreshold: 5
          periodSeconds: 1
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: contextservice
  labels:
    app: contextservice
spec:
  type: ClusterIP
  selector:
    app: contextservice
  ports:
  - name: grpc
    protocol: TCP
    port: 1010
    targetPort: 1010
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
