baseline/tfs-controller/manifests/dbscanservingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbscanservingservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dbscanservingservice
  template:
    metadata:
      labels:
        app: dbscanservingservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/dbscanserving:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10008
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dbscanservingservice
  labels:
    app: dbscanservingservice
spec:
  type: ClusterIP
  selector:
    app: dbscanservingservice
  ports:
  - name: grpc
    port: 10008
    targetPort: 10008
  - name: metrics
    port: 9192
    targetPort: 9192
