baseline/tfs-controller/manifests/deviceservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deviceservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deviceservice
  replicas: 1
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-outbound-ports: '8002'
      labels:
        app: deviceservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/device:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 2020
        - containerPort: 9192
        command:
        - /bin/sh
        - -c
        args:
        - pip install macaddress p4runtime==1.3.0 && python -m device.service
        startupProbe:
          grpc:
            port: 2020
          failureThreshold: 5
          periodSeconds: 1
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: deviceservice
  labels:
    app: deviceservice
spec:
  type: ClusterIP
  selector:
    app: deviceservice
  ports:
  - name: grpc
    protocol: TCP
    port: 2020
    targetPort: 2020
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
