baseline/tfs-controller/manifests/dltservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dltservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dltservice
  template:
    metadata:
      labels:
        app: dltservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: connector
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/dlt-connector:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 9192
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: gateway
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/dlt-gateway:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: 8081
          #  initialDelaySeconds: 5
          #  timeoutSeconds: 5
          #livenessProbe:
          #  httpGet:
          #    path: /health
          #    port: 8081
          #  initialDelaySeconds: 5
          #  timeoutSeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 1024Mi
          limits:
            cpu: 700m
            memory: 1024Mi
        volumeMounts:
        - name: keystore
          mountPath: /etc/hyperledger/fabric-keystore
          readOnly: true
        - name: signcerts
          mountPath: /etc/hyperledger/fabric-signcerts
          readOnly: true
        - name: ca-crt
          mountPath: /etc/hyperledger/fabric-ca-crt
          readOnly: true
      volumes:
      - name: keystore
        secret:
          secretName: dlt-keystone
      - name: signcerts
        secret:
          secretName: dlt-signcerts
      - name: ca-crt
        secret:
          secretName: dlt-ca-crt
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
spec:
  selector:
    app: dltservice
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
    nodePort: 32001
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: dltservice
  labels:
    app: dltservice
spec:
  type: ClusterIP
  selector:
    app: dltservice
  ports:
  - name: grpc
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
