baseline/tfs-controller/manifests/e2e_orchestratorservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e2e-orchestratorservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: e2e-orchestratorservice
  replicas: 1
  template:
    metadata:
      labels:
        app: e2e-orchestratorservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/e2e-orchestrator:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10050
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: e2e-orchestratorservice
  labels:
    app: e2e-orchestratorservice
spec:
  type: ClusterIP
  selector:
    app: e2e-orchestratorservice
  ports:
  - name: grpc
    port: 10050
    targetPort: 10050
  - name: metrics
    port: 9192
    targetPort: 9192
