baseline/tfs-controller/manifests/forecasterservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecasterservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forecasterservice
  template:
    metadata:
      labels:
        app: forecasterservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/forecaster:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10040
        - containerPort: 9192
        startupProbe:
          grpc:
            port: 10040
          failureThreshold: 5
          periodSeconds: 1
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: forecasterservice
  labels:
    app: forecasterservice
spec:
  type: ClusterIP
  selector:
    app: forecasterservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10040
    targetPort: 10040
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
