baseline/tfs-controller/manifests/interdomainservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interdomainservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: interdomainservice
  template:
    metadata:
      labels:
        app: interdomainservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/interdomain:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10010
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: interdomainservice
  labels:
    app: interdomainservice
spec:
  type: ClusterIP
  selector:
    app: interdomainservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10010
    targetPort: 10010
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
