baseline/tfs-controller/manifests/kpi_value_apiservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpi-value-apiservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kpi-value-apiservice
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-outbound-ports: '4222'
      labels:
        app: kpi-value-apiservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/kpi_value_api:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30020
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kpi-value-apiservice
  labels:
    app: kpi-value-apiservice
spec:
  type: ClusterIP
  selector:
    app: kpi-value-apiservice
  ports:
  - name: grpc
    protocol: TCP
    port: 30020
    targetPort: 30020
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
