baseline/tfs-controller/manifests/load_generatorservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generatorservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: load-generatorservice
  replicas: 1
  template:
    metadata:
      labels:
        app: load-generatorservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/load_generator:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 50052
        - containerPort: 9192
        resources:
          requests:
            cpu: 256m
            memory: 128Mi
          limits:
            cpu: 512m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: load-generatorservice
  labels:
    app: load-generatorservice
spec:
  type: ClusterIP
  selector:
    app: load-generatorservice
  ports:
  - name: grpc
    protocol: TCP
    port: 50052
    targetPort: 50052
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
