baseline/tfs-controller/manifests/monitoringservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoringservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: monitoringservice
  replicas: 1
  template:
    metadata:
      labels:
        app: monitoringservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/monitoring:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
        - containerPort: 9192
        startupProbe:
          tcpSocket:
            port: 7070
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: monitoringservice
  labels:
    app: monitoringservice
spec:
  type: ClusterIP
  selector:
    app: monitoringservice
  ports:
  - name: grpc
    protocol: TCP
    port: 7070
    targetPort: 7070
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
