baseline/tfs-controller/manifests/nbiservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbiservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nbiservice
  replicas: 1
  template:
    metadata:
      labels:
        app: nbiservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/nbi:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        resources:
          requests:
            cpu: 150m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nbiservice
  labels:
    app: nbiservice
spec:
  type: ClusterIP
  selector:
    app: nbiservice
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
