baseline/tfs-controller/manifests/opticalcontrollerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opticalcontrollerservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opticalcontrollerservice
  replicas: 1
  template:
    metadata:
      labels:
        app: opticalcontrollerservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/opticalcontroller:rc13-verified
        imagePullPolicy: Never
        ports:
        - containerPort: 10060
        - containerPort: 9192
        resources:
          requests:
            cpu: 1000m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: opticalcontrollerservice
  labels:
    app: opticalcontrollerservice
spec:
  type: ClusterIP
  selector:
    app: opticalcontrollerservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10060
    targetPort: 10060
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
