baseline/tfs-controller/manifests/osm_clientservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osm-clientservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: osm-clientservice
  template:
    metadata:
      labels:
        app: osm-clientservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/osm_client:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30210
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: osm-clientservice
  labels:
    app: osm-clientservice
spec:
  type: ClusterIP
  selector:
    app: osm-clientservice
  ports:
  - name: grpc
    protocol: TCP
    port: 30210
    targetPort: 30210
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
