baseline/tfs-controller/manifests/pathcompservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathcompservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pathcompservice
  template:
    metadata:
      labels:
        app: pathcompservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: frontend
        image: ${_CUSTOMER_REGISTRY}/pathcomp-frontend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10020
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: backend
        image: ${_CUSTOMER_REGISTRY}/pathcomp-backend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 9193
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pathcompservice
  labels:
    app: pathcompservice
spec:
  type: ClusterIP
  selector:
    app: pathcompservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10020
    targetPort: 10020
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
