baseline/tfs-controller/manifests/policyservice.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 8065cee75be759e14af792737179537096de5e11
    app.quarkus.io/build-timestamp: 2023-03-30 - 13:49:59 +0000
  labels:
    app.kubernetes.io/name: policyservice
    app: policyservice
  name: policyservice
spec:
  ports:
  - name: metrics
    port: 9192
    targetPort: 8080
  - name: grpc
    port: 6060
    targetPort: 6060
  selector:
    app.kubernetes.io/name: policyservice
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 8065cee75be759e14af792737179537096de5e11
    app.quarkus.io/build-timestamp: 2023-03-30 - 13:49:59 +0000
  labels:
    app: policyservice
    app.kubernetes.io/name: policyservice
  name: policyservice
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: policyservice
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 8065cee75be759e14af792737179537096de5e11
        app.quarkus.io/build-timestamp: 2023-03-30 - 13:49:59 +0000
      labels:
        app: policyservice
        app.kubernetes.io/name: policyservice
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_SERVICE_HOST
          value: serviceservice
        - name: CONTEXT_SERVICE_HOST
          value: contextservice
        - name: MONITORING_SERVICE_HOST
          value: monitoringservice
        image: ${_CUSTOMER_REGISTRY}/policy:rc13-verified
        imagePullPolicy: Always
        name: policyservice
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 6060
          name: grpc-server
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 1024Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
