baseline/tfs-controller/manifests/qkd_appservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qkd-appservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qkd-appservice
  template:
    metadata:
      labels:
        app: qkd-appservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/qkd_app:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10060
        - containerPort: 9192
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: qkd-appservice
  labels:
    app: qkd-appservice
spec:
  type: ClusterIP
  selector:
    app: qkd-appservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10060
    targetPort: 10060
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
