baseline/tfs-controller/manifests/simap_connectorservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simap-connectorservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: simap-connectorservice
  replicas: 1
  template:
    metadata:
      labels:
        app: simap-connectorservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/simap_connector:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        - containerPort: 9192
        startupProbe:
          grpc:
            port: 9090
          failureThreshold: 5
          periodSeconds: 1
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: simap-connectorservice
  labels:
    app: simap-connectorservice
spec:
  type: ClusterIP
  selector:
    app: simap-connectorservice
  ports:
  - name: grpc
    protocol: TCP
    port: 9090
    targetPort: 9090
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
