baseline/tfs-controller/manifests/sliceservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sliceservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sliceservice
  template:
    metadata:
      labels:
        app: sliceservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: ${_CUSTOMER_REGISTRY}/slice:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 4040
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sliceservice
  labels:
    app: sliceservice
spec:
  type: ClusterIP
  selector:
    app: sliceservice
  ports:
  - name: grpc
    protocol: TCP
    port: 4040
    targetPort: 4040
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
