baseline/tfs-controller/manifests/telemetryservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetryservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: telemetryservice
  #replicas: 1
  template:
    metadata:
      labels:
        app: telemetryservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/telemetry-frontend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30050
        - containerPort: 9192
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: backend
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/telemetry-backend:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 30060
        - containerPort: 9193
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: telemetryservice
  labels:
    app: telemetryservice
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: telemetryservice
  ports:
  - name: grpc
    protocol: TCP
    port: 30050
    targetPort: 30050
  - name: grpc-backend
    protocol: TCP
    port: 30060
    targetPort: 30060
  - name: metrics-frontend
    protocol: TCP
    port: 9192
    targetPort: 9192
  - name: metrics-backend
    protocol: TCP
    port: 9193
    targetPort: 9193
---
apiVersion: v1
kind: Service
metadata:
  name: telemetryservice-udp
  labels:
    app: telemetryservice
spec:
  type: ClusterIP
  selector:
    app: telemetryservice
  ports:
  - name: dnsudp
    protocol: UDP
    port: 12345
    targetPort: 12345
