baseline/tfs-controller/manifests/teservice.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: teservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: teservice
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "4189"
      labels:
        app: teservice
    spec:
      terminationGracePeriodSeconds: 5
      shareProcessNamespace: true
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/te:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 10030
        resources:
          requests:
            cpu: 250m
            memory: 1024Mi
          limits:
            cpu: 700m
            memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: teservice
spec:
  type: ClusterIP
  selector:
    app: teservice
  ports:
  - name: grpc
    protocol: TCP
    port: 10030
    targetPort: 10030
  - name: pcep
    protocol: TCP
    port: 4189
    targetPort: 4189
