baseline/tfs-controller/manifests/webuiservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webuiservice
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webuiservice
  replicas: 1
  template:
    metadata:
      labels:
        app: webuiservice
    spec:
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 472
        supplementalGroups:
        - 0
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/webui:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
      - name: grafana
        image: grafana/grafana:8.5.22
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http-grafana
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-pv
      volumes:
      - name: grafana-pv
        persistentVolumeClaim:
          claimName: grafana-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webuiservice
  labels:
    app: webuiservice
spec:
  type: ClusterIP
  selector:
    app: webuiservice
  ports:
  - name: webui
    port: 8004
    targetPort: 8004
  - name: grafana
    port: 3000
    targetPort: 3000
