baseline/tfs-controller/manifests/ztp_server.yaml
# Copyright 2022-2025 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ztp-server-service
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ztp-server-service
  #replicas: 1
  template:
    metadata:
      labels:
        app: ztp-server-service
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/ztp_server:rc13-verified
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        - containerPort: 5051
        - containerPort: 9192
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ztp-server-service
  labels:
    app: ztp-server-service
spec:
  type: ClusterIP
  selector:
    app: ztp-server-service
  ports:
  - name: http
    protocol: TCP
    port: 8005
    targetPort: 8005
  - name: grpc
    protocol: TCP
    port: 5051
    targetPort: 5051
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 9192
