baseline/tfs-controller/manifests/ztpservice.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-09-19 - 10:48:18 +0000
  labels:
    app.kubernetes.io/name: ztpservice
    app: ztpservice
  name: ztpservice
spec:
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
  - name: metrics
    protocol: TCP
    port: 9192
    targetPort: 8080
  selector:
    app.kubernetes.io/name: ztpservice
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-09-19 - 10:48:18 +0000
  labels:
    app: ztpservice
    app.kubernetes.io/name: ztpservice
  name: ztpservice
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ztpservice
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-09-19 - 10:48:18 +0000
      labels:
        app: ztpservice
        app.kubernetes.io/name: ztpservice
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CONTEXT_SERVICE_HOST
          value: contextservice
        - name: DEVICE_SERVICE_HOST
          value: deviceservice
        image: us-central1-docker.pkg.dev/cogctl-gke-v01/sovereign-tfs/ztp:rc13-verified
        imagePullPolicy: Always
        name: ztpservice
        ports:
        - containerPort: 5050
          name: grpc
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 1024Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
#---
#apiVersion: autoscaling/v2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: ztpservice-hpa
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: ztpservice
#  minReplicas: 1
#  maxReplicas: 10
#  metrics:
#    - type: Resource
#      resource:
#        name: cpu
#        target:
#          type: Utilization
#          averageUtilization: 80
