baseline/tfs-controller/manifests/nginx_ingress_http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tfs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: tfs-nbi-session
    nginx.ingress.kubernetes.io/session-cookie-path: /socket.io
    nginx.ingress.kubernetes.io/session-cookie-expires: '3600'
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: 'true'
    nginx.ingress.kubernetes.io/limit-rps: '50'
    nginx.ingress.kubernetes.io/limit-connections: '50'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webuiservice
            port:
              number: 8004
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webuiservice
            port:
              number: 3000
      - path: /.well-known(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /restconf(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /socket.io(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /tfs-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /bmw(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /qkd_app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /camara(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /agent-probes(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
      - path: /osm-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nbiservice
            port:
              number: 8080
